# IWS-Modelling-Methods

./: .gitignore  Example.py  IWSModellingReqs.yml  README.md  README.txt  STM.py
Conversion-Files/: Campisanofier.ipynb  Conversion_to_3O2S1P.ipynb  Conversion_to_CV-Res.ipynb  Conversion_to_CV-Tank.ipynb  Conversion_to_FCV-EM.ipynb  Conversion_to_FCV-Res.ipynb  Conversion_to_FCV-Tank.ipynb  Conversion_to_FCVEM.ipynb  Conversion_to_FCVRes.ipynb  Conversion_to_Float-Storage.ipynb  Conversion_to_Outlet-Outfall.ipynb  Conversion_to_Outlet-Storage.ipynb  Conversion_to_PSV-Tank.ipynb  Conversion_to_PSV.ipynb  Conversion_to_Res.ipynb  Conversion_to_STM.ipynb  Conversion_to_SWMM-FR.ipynb  Conversion_to_SWMM-VR.ipynb  Supply_Duration_Converter.ipynb
IWSModelling/: CHANGES.txt  IWSModellingReqs.yml  LICENSE  README_PKG.md  manifest.in  pyproject.toml  requirements.txt  setup.cfg
IWSModelling/iws_modelling/: Convert_Method.py  Example.py  Examples.py  Run_Method.py  __init__.py
IWSModelling/iws_modelling/resources/: Empty_SWMM_Template.inp  Network1_8hr.inp  Network1_8hr_Outlet-Storage.inp
Network-Files/: Empty_SWMM_Template.inp
Network-Files/Network 1/: Network1_12hr_CV-Res.inp  Network1_12hr_CV-Tank.inp  Network1_12hr_FCV-EM.inp  (+22 more)
Reproducing-Figures-Tables/: Figure2.ipynb  Figure3.ipynb  Figure4.ipynb  Figure5.ipynb  Quick_Start.py  Table S-5.ipynb
Running-Methods/: Parsing Input Files.ipynb  STM.py  STM_Notebook.ipynb  temp.inp  temp.rpt
Utilities-tools/: float_valve_rules_writer.ipynb  water_balance.ipynb  water_balance_2.ipynb  water_balance_wleak.ipynb
(+90 files in other folders)
