[build-system]
requires = ["setuptools>=61.0",
"pandas","numpy","matplotlib","wntr","pyswmm"
]
build-backend = "setuptools.build_meta"

[project]
name = "iws_modelling"
version = "0.0.8"
authors = [
  { name="Omar Abdelazeem", email="o.abdelazeem@mail.utoronto.ca" },{ name="David Meyer", email="david.meyer@utoronto.ca"},
]
description = "for modelling intermittent water supply networks using epanet and epa-swmm"
readme = "README_PKG.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Omar-Abdelazeem/IWS-Modelling-Methods-Repo"
