[metadata]
name = iws_modelling
version = 0.0.1
author = Omar Abdelazeem
author_email = o.abdelazeem@mail.utoronto.ca
description = for modelling intermittent water supply networks using epanet and epa-swmm
long_description = file: README.md
long_description_content_type= text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data= True